# frpDesktop

./: .gitignore  README.md  frpc.toml
.github/workflows/: release.yml
app/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/scripts/: gen-icon.mjs
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: error.rs  lib.rs  main.rs  paths.rs
app/src-tauri/src/commands/: mod.rs
app/src-tauri/src/config/: mod.rs
app/src-tauri/src/frpc/: mod.rs
app/src-tauri/src/runner/: launchd.rs  mod.rs  process.rs
app/src/api/: tauri.ts
app/src/pages/: Config.tsx  Dashboard.tsx  Settings.tsx
app/src/store/: app.ts
app/src/styles/: global.css
